k8s/0_namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neoshowcase
---
apiVersion: v1
kind: Namespace
metadata:
  name: neoshowcase-apps
