k8s/4_builder.yaml
apiVersion: v1
kind: Service
metadata:
  name: builder
  namespace: neoshowcase
  labels:
    app: builder
spec:
  ports:
    - port: 10000
      targetPort: grpc
  clusterIP: None
  selector:
    app: builder
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: builder
    neoshowcase.trap.jp/component-type: "builder"
  name: builder
  namespace: neoshowcase
spec:
  serviceName: builder
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      app: builder
      neoshowcase.trap.jp/component-type: "builder"
  template:
    metadata:
      labels:
        app: builder
        neoshowcase.trap.jp/component-type: "builder"
    spec:
      containers:
        - name: buildkitd
          image: moby/buildkit
          args:
            - --addr
            - unix:///run/buildkit/buildkitd.sock
          readinessProbe:
            exec:
              command:
                - buildctl
                - debug
                - workers
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            exec:
              command:
                - buildctl
                - debug
                - workers
            initialDelaySeconds: 5
            periodSeconds: 30
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /run/buildkit
              name: socket
        - name: builder
          image: ghcr.io/traptitech/ns-builder:master
          imagePullPolicy: Always
          ports:
            - containerPort: 10000
              name: grpc
          volumeMounts:
            - mountPath: /run/buildkit
              name: socket
      volumes:
        - name: socket
          emptyDir: { }
      nodeSelector:
        neoshowcase.trap.jp/builder-node: "true"
