k8s/5_ssgen.yaml
apiVersion: v1
kind: Service
metadata:
  name: staticsite
  namespace: neoshowcase
  labels:
    app: staticsite
spec:
  ports:
    - port: 10000
      targetPort: grpc
      name: grpc
    - port: 80
      targetPort: http
      name: http
  clusterIP: None
  selector:
    app: staticsite
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: staticsite
    neoshowcase.trap.jp/component-type: "ssgen"
  name: staticsite
  namespace: neoshowcase
spec:
  serviceName: staticsite
  replicas: 1
  selector:
    matchLabels:
      app: staticsite
      neoshowcase.trap.jp/component-type: "ssgen"
  template:
    metadata:
      labels:
        app: staticsite
        neoshowcase.trap.jp/component-type: "ssgen"
    spec:
      containers:
        - name: caddy
          image: caddy:2.2.1-alpine
          command:
            - caddy
            - run
            - --resume
          volumeMounts:
            - mountPath: /artifacts
              name: artifacts
          ports:
            - containerPort: 80
              name: http
        - name: ssgen
          image: ghcr.io/traptitech/ns-ssgen:master
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /artifacts
              name: artifacts
          ports:
            - containerPort: 10000
              name: grpc
      volumes:
        - name: artifacts
          emptyDir: { }
