k8s/6_core.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc
  namespace: neoshowcase
  labels:
    app: mc
spec:
  ports:
    - port: 8081
      targetPort: http
  clusterIP: None
  selector:
    app: mc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mc
  name: mc
  namespace: neoshowcase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mc
  template:
    metadata:
      labels:
        app: mc
    spec:
      containers:
        - name: mc
          image: ghcr.io/traptitech/ns-mc:master
          ports:
            - containerPort: 8081
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: apiserver
  namespace: neoshowcase
  labels:
    app: apiserver
spec:
  ports:
    - port: 80
      targetPort: http
  clusterIP: None
  selector:
    app: apiserver
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apiserver
  namespace: neoshowcase
  labels:
    app: apiserver
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
    - host: dev.wtks.work
      http:
        paths:
          - backend:
              serviceName: apiserver
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apiserver
  name: apiserver
  namespace: neoshowcase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apiserver
  template:
    metadata:
      labels:
        app: apiserver
    spec:
      serviceAccountName: apiserver
      containers:
        - name: apiserver
          image: ghcr.io/traptitech/ns:master
          ports:
            - containerPort: 8080
              name: http
